# 2018-01-MeetupDemo

./: .gitignore  README.md
app/: CMakeLists.txt  Makefile  build.gradle
app/src/androidTest/java/com/zw3rk/meetupdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/hs/: .#Lib.hs  Lib.hs  Lib_stub.h
app/src/main/java/com/zw3rk/meetupdemo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zw3rk/meetupdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
